This file documents the revision history for Perl extension CatalystAdvent.

0.02  Thu Dec  8 2005
        - RSS feed available
        - code refactored
        - CSS fixings, now using static file
        - docs updated

0.01  Mon Dec  5 20:59:38 2005
        - initial revision, generated by Catalyst